tests/ui/never_type/issue-96335.stderr
error: unexpected token: `...`
  --> $DIR/issue-96335.rs:2:6
   |
LL |     0.....{loop{}1};
   |      ^^^
   |
help: use `..` for an exclusive range
   |
LL -     0.....{loop{}1};
LL +     0....{loop{}1};
   |
help: or `..=` for an inclusive range
   |
LL -     0.....{loop{}1};
LL +     0..=..{loop{}1};
   |

error: aborting due to 1 previous error

